kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: app.$EXTERNAL_IP.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: app-nbiot-detector
                port:
                  number: 8000
            path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.$EXTERNAL_IP.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
            path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.$EXTERNAL_IP.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
            path: /
